fix(css): align & wrap checkbox correctly

--- a/src/submit/index.styl
+++ b/src/submit/index.styl
@@ -18,8 +18,6 @@ form .btn
 
 label.check
 	display inline-flex
-	align-items center
-	flex-wrap wrap
 
 input[type=checkbox]
 	width 1.25rem
@@ -29,6 +27,7 @@ input[type=checkbox]
 	vertical-align top
 	position relative
 	cursor pointer
+	top 3px
 	margin-right 0.5rem
 	border-radius 4px
 	border 1px solid rgba(#7C8794, 0.5)
